src/index.css
:root {
  font-family: PlayFair Display, 'Cormorant Unicase', Inter, system-ui, Avenir, Helvetica, Arial,
    serif, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: #F5F0F0;
  background-color: #cbcbcb;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
  filter: brightness(1.3);
}

.nav2-link:hover {
  filter: none;
}

.nav3-link:hover {
  filter: none;
}

#sea-angel-link:hover {
  filter: none;
}

body {
  margin: 0;
  place-items: center;
  min-width: 320px;
  max-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  box-sizing: border-box;
  cursor: pointer;
  overflow-x: hidden;
}

/* for chrome 
html { overflow-x: hidden; }
*/

h2 {
  font-size: 2.4em;
  line-height: 1.1;
  font-family: 'Cormorant Unicase';
  margin: 0;
}

h1 {
  font-size: 3.5em;
  line-height: 1.1;
  font-family: 'Cormorant Unicase';
  margin: 0;
}

h3 {
  font-size: 1.5em;
  line-height: 1.1;
  font-family: 'Cormorant Unicase';
  margin: 0;
}

button {
  border: none;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  cursor: pointer;
  background-color: transparent;
}

/*
  padding: 0.6em 1.2em;
*/

button:hover {
  filter:brightness(1.2)
}
button:focus,
button:focus-visible {
  filter:brightness(1.2)
}
/*
@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}
*/

/*mes règles*/
/*avant:fontfamiy Inter, Avenir*/
/*jolies couleur : #646cff on hover assombrit: #535bf2;*/
/*gris: C0C0C0
bleu inset: 4A94D7
avant box shadow : 213547 ->*/

.main-card {
  border: 1px solid #646cff;
  box-shadow: inset 1px 0px 1em #4A94D7;
  border-radius: 70px;
  padding: 30px;
}

.page-content {
  margin: 0 40px;
}

body {
  cursor: url(./assets/cursors/starfish.cur), auto;
}

/* cursor colors
#113c6d #0e4575 #0a6ea3
#379fca #33a9d1 #39afd5
*/

/*sea angel colors
#
*/

/* Hide the scrollbar */

body::-webkit-scrollbar {
  width: 0px !important;
  background-color: transparent;
  display: none;
}

body::-webkit-scrollbar {
  width: 0px;
}

/* Hide the scrollbar on IE / Edge */
body {
  -ms-overflow-style: none;
}

/* Hide the scrollbar on Firefox */
html {
  scrollbar-width: none;
}

